# scut-notice

./: .gitignore  Cargo.toml  flake.nix
src/: detail.rs  main.rs  metadata.rs  util.rs
