[package]
name = "scut-notice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.11.8"
html-escape = "0.2.13"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
scraper = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full", "macros"] }
url = "2.5.4"
